--- a/uki.html
+++ b/uki.html
@@ -7,12 +7,13 @@
 </head>
 <body>
 <h1>Uki Student</h1>
-
-  <div class="a">
+<center>
+<div class="a">
   <fieldset>
       <legend>Uki.life</legend>
-
+<div style="text-align:left">
 <table>
+
   <tr>
     <td>First name:</td>
    <td><input type="text" name="firstname"></td>
@@ -23,20 +24,44 @@
 </tr>
 <tr>
   <td>Reg No:</td>
-  <td><input type="text" name="regno" value="">
+  <td><input type="text" name="regno" value=""></td>
   </tr>
   <tr>
     <td>Date of Birth:</td>
-    <td><input type="date" name="Date" >
+    <td><input type="date" name="Date" ></td>
     </tr>
     <tr>
       <td>Gender</td>
       <td><input type="radio" name="" value="">Male
         <input type="radio" name="" value="">female</td>
-        
+    </tr>
+  </table>
+<form>
+  Favourite Subjects:<br>
+  <input type="checkbox">English
+  <input type="checkbox">Personal Coaching
+  <input type="checkbox">Wep Devlopment
+  <input type="checkbox">Programming<br><br>
+</form>
+Feedback: <br>
+<table>
+  <td><td>
+  <td><td>
+    <td> <textarea float="center" type="text" style="height:150px; width: 250px"></textarea>
+    </table>
 
 
+      <center>  <button type="button" onclick="alert('Hello World!')">Reset</button><button type="button" onclick="alert('Hello World!')">Submit</button></center>
+
+
+
+
+
+
+</div>
   </fieldset>
 </div>
+</center>
+
 </body>
 </html>
